--- a/sorting.html
+++ b/sorting.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <title>Sorting Visualizer</title>
+    <title>sorting Visualizer</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
+
 <body>
-    <h1>Sorting visualizer with sound</h1>
+    <h1>Sorting visualizer</h1>
     <div id="container"></div>
+
+    <hr>
+
+    <div>
+        <button onClick="init()">init</button>
+        <button onClick="play()">play</button>
+    </div>
     <script src="script.js"></script>
-    
 </body>
 </html>
